# dd-trace-dotnet

docker/: Datadog.Trace.ClrProfiler.Native.sh
src/Datadog.Trace.ClrProfiler.Managed/Emit/: MethodBuilder.cs
src/Datadog.Trace.ClrProfiler.Native/: CMakeLists.txt
